--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "main": "src/server.js",
-  "scripts": {
-    "start": "react-scripts start & node src/server.js",
+ "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test && jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+}
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
