--- a/project-root/client/package.json
+++ b/project-root/client/package.json
@@ -31,5 +31,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000"
+    "proxy": "https://urldatafetcher-954ee211f2a1.herokuapp.com/"
 }
