--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "start": "node server/src/server.js",
-    "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build",
+    "heroku-postbuild": "cd project-root/server && npm install && cd ../client && npm install && npm run build",
     "test": "cd project-root/server && npm test && cd ../client && npm test"
   },
   "cacheDirectories": ["server/node_modules", "client/node_modules"]
