--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "src/server.js",
     "scripts": {
-        "start": "node ./server.js",
+        "start": "node ../src/server.js",
         "test": "jest"
     },
     "dependencies": {
